# aistack

./: .gitignore  .vercelignore  FIX_PLAN.md  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: release-cli.yml
app/: error.tsx  globals.css  layout.tsx  page.tsx
app/[layerId]/: loading.tsx  page.tsx
app/[slug]/: entity-content.tsx  entity-page.tsx  layer-content.tsx  page.tsx  (+1 more)
apps/cli/: Cargo.toml  README.md
apps/cli/fixtures/cloudflare-services/: package.json  wrangler.json
apps/cli/fixtures/cloudflare-worker/: package.json  wrangler.jsonc
apps/cli/fixtures/monorepo-basic/: package.json  wrangler.jsonc
apps/cli/fixtures/monorepo-basic/apps/web/: package.json
apps/cli/fixtures/node-basic/: package.json
apps/cli/fixtures/rust-basic/: Cargo.toml
apps/cli/npm/: README.md  package.json
apps/cli/npm/test/: aistack.test.js
apps/cli/src/: agent_logs.rs  auth.rs  cli.rs  main.rs  output.rs  scanner.rs  types.rs
components/: company-selector.tsx  directory-content.tsx  layer-selector.tsx  loading-state.tsx  login-form.tsx  meetups-content.tsx  my-stack-components.tsx  newsletter-subscribe.tsx  onboarding-modal.tsx  sign-up-form.tsx  theme-switcher.tsx
data/: pulse.csv
lib/: data.ts  entity-logo.tsx  link-preview.ts
scripts/: add-user-stacks-unique-constraint.sql  create-bucket.ts  disable-rls.sql  entities-template.csv  excel-to-sql.js  gen-types.sh  import-entities.sh  import-entities.sql  update-entity-layers-schema.sql  upload-logo.ts
supabase/: schema.sql  seed.sql
types/: database.types.ts
(+90 files in other folders)
